cpp/etl/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.008s
user	0m0.001s
sys	0m0.007s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/etl/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/etl/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/etl/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/etl/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/etl/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/etl/build'
[ 25%] Building CXX object CMakeFiles/etl.dir/etl_test.cpp.o
[ 50%] Building CXX object CMakeFiles/etl.dir/etl.cpp.o
[ 75%] Building CXX object CMakeFiles/etl.dir/test/tests-main.cpp.o
[100%] Linking CXX executable etl
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/etl/build'
[100%] Built target etl
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/etl/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/etl/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/etl/build'
===============================================================================
All tests passed (4 assertions in 4 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/etl/build'
[100%] Built target test_etl
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/etl/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/etl/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/etl.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/etl.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)13446"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
etl.cpp                                        7       7   100%   
etl_test.cpp                                  31      24    77%   43-49
test/catch.hpp                                52      27    51%   1448-1450,1580-1581,1628,1630,1642-1643,1827-1833,1835-1836,2016-2017,2039-2040,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         90      58    64%
------------------------------------------------------------------------------
lines: 64.4% (58 out of 90)
branches: 38.6% (64 out of 166)

real	0m10.713s
user	0m9.729s
sys	0m0.941s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.158s
user	0m0.117s
sys	0m0.043s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 3


real	0m0.161s
user	0m0.125s
sys	0m0.037s

===============================================================================

Running: clang-format-16 -style=file -i ./etl.cpp ./etl_test.cpp ./etl.h

real	0m0.021s
user	0m0.012s
sys	0m0.009s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./etl.cpp ./etl_test.cpp ./etl.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/etl/etl.h:4:10: fatal error: 'map' file not found
#include <map>
         ^~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/etl/etl.h.

real	0m0.656s
user	0m0.623s
sys	0m0.033s


real	0m0.658s
user	0m0.625s
sys	0m0.033s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
16433 warnings generated.
53617 warnings generated.
53617 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/etl/etl.h.
Suppressed 53622 warnings (53617 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m8.302s
user	0m8.225s
sys	0m0.075s
Running: clang-tidy-16 ./etl.cpp ./etl_test.cpp ./etl.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/etl/etl.h:4:10: error: 'map' file not found [clang-diagnostic-error]
#include <map>
         ^~~~~


real	0m8.304s
user	0m8.227s
sys	0m0.076s

===============================================================================

